# cognee-load-theory

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  dev-win.cmd  pyproject.toml
app/: main.py  utils.py
backend/api/: __init__.py  actions.py  graph.py  ingest.py  load.py  memory.py  tasks.py
backend/core/: auth.py  cognee_local_store.py  cognee_store.py  demo_seed.py  memory_store.py  models.py  settings.py
data/: README.md  demo-family-mertens.yaml  family-coordination.owl
docs/: CONCEPT.md  demo-family-mertens.md  family-coordination-ontology.md  the-mind-space.md  working-with-cognee.md
docs/superpowers/specs/: 2026-06-29-backend-frontend-skeleton-design.md
frontend/: app.js  index.html  next.config.ts  package-lock.json  package.json  style.css  viewer.html
frontend/app/: layout.tsx  page.module.css  page.tsx
frontend/app/explore/: ConstellationView.tsx  explore.module.css  graphModel.ts  page.tsx
frontend/app/graph/: SpaceView.tsx  graph.module.css  page.tsx  planetTextures.ts
frontend/app/lib/: api.ts
frontend/app/museum/: MuseumView.tsx  museum.module.css  page.tsx
frontend/app/museum-2/: MindSpaceView.tsx  museum2.module.css  page.tsx
