[project]
name = "cognee-load-theory"
version = "0.2.0"
description = "FastAPI JSON API turning family context into shared Cognee memory, visualized as a walkable mind space."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
